--- a/source/demo/modules/slideshow/slideshow.twig
+++ b/source/demo/modules/slideshow/slideshow.twig
@@ -1,7 +1,7 @@
 <div class="mod_slideshow" data-init="slideshow" data-slideshow-data='{"i18n":{"prev":"Previous Bill","next":"Next Bill"}}' data-slideshow-options='{"animationDuration":100}'>
 	<div class="slides" data-slideshow="slides">
-		{{#each slides}}
-			{{> "demo/modules/slideshow/_slideshow_slide.js" this}}
-		{{/each}}
+		{% for slide in slides %}
+			{% include "demo/modules/slideshow/_slideshow_slide.js.twig" with slide %}
+		{% endfor %}
 	</div>
 </div>
