--- a/source/assets/css/templates/_iconfont.scss
+++ b/source/assets/css/templates/_iconfont.scss
@@ -15,10 +15,10 @@
  */
 
 $icons: (
-	{{#each icons}}"{{@key}}": (
-		"char": "\\{{this.codepoint}}"
+	{% for key, icon in icons %}"{{key}}": (
+		"char": "\\{{icon.codepoint}}"
 	),
-	{{/each}}
+	{% endfor %}
 );
 
 
@@ -83,12 +83,12 @@ $icons: (
 	@include iconDefaultStyles;
 }
 
-{{#each icons}}.icon_{{@key}} {
+{% for key, icon in icons %}.icon_{{key}} {
 
 	&:before {
 		@extend %icon;
 	}
 
-	@include icon("{{@key}}", $skipDefaultsStyles: true);
+	@include icon("{{key}}", $skipDefaultsStyles: true);
 }
-{{/each}}
+{% endfor %}
